java/gen/SONNXParser.java
package gen;// Generated from C:/Users/yang/IdeaProjects/compail_1/ex1/src/main/antrl4/SONNXParser.g4 by ANTLR 4.13.2
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue", "this-escape"})
public class SONNXParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		MODELPROTO=1, GRAPH=2, NAME=3, NODE=4, INPUT=5, OUTPUT=6, OP_TYPE=7, ATTRIBUTE=8, 
		INITIALIZER=9, DOC_STRING=10, DOMAIN=11, MODEL_VERSION=12, PRODUCER_NAME=13, 
		PRODUCER_VERSION=14, TYPE=15, TENSOR_TYPE=16, IR_VERSION=17, ELEM_TYPE=18, 
		SHAPE=19, DIM=20, DIMS=21, RAW_DATA=22, OPSET_IMPORT=23, DIM_VALUE=24, 
		DIM_PARAM=25, DATA_TYPE=26, VERSION=27, VALUE=28, INT=29, FLOAT=30, STRING_KEY=31, 
		BOOL=32, LBRACE=33, RBRACE=34, LBRACKET=35, RBRACKET=36, COMMA=37, EQUALS=38, 
		INTEGER=39, STRING=40, BYTES=41, WS=42, COMMENT=43;
	public static final int
		RULE_model = 0, RULE_model_body_def = 1, RULE_ir_version_def = 2, RULE_producer_name_def = 3, 
		RULE_producer_version_def = 4, RULE_domain_def = 5, RULE_model_version_def = 6, 
		RULE_doc_string_def = 7, RULE_graph_def = 8, RULE_graph_body_def = 9, 
		RULE_node_list = 10, RULE_node_def = 11, RULE_input_arr = 12, RULE_output_arr = 13, 
		RULE_attribute_list = 14, RULE_attribute_def = 15, RULE_value_def = 16, 
		RULE_input_list = 17, RULE_output_list = 18, RULE_value_info_def = 19, 
		RULE_type_def = 20, RULE_tensor_type_def = 21, RULE_elem_type_def = 22, 
		RULE_shape_def = 23, RULE_dim_list = 24, RULE_dim_def = 25, RULE_dim_value_def = 26, 
		RULE_dim_param_def = 27, RULE_initializer_list = 28, RULE_tensor_def = 29, 
		RULE_data_type_def = 30, RULE_dims_def = 31, RULE_raw_data_def = 32, RULE_opset_import_def = 33, 
		RULE_version_def = 34, RULE_name_def = 35, RULE_op_type_def = 36;
	private static String[] makeRuleNames() {
		return new String[] {
			"model", "model_body_def", "ir_version_def", "producer_name_def", "producer_version_def", 
			"domain_def", "model_version_def", "doc_string_def", "graph_def", "graph_body_def", 
			"node_list", "node_def", "input_arr", "output_arr", "attribute_list", 
			"attribute_def", "value_def", "input_list", "output_list", "value_info_def", 
			"type_def", "tensor_type_def", "elem_type_def", "shape_def", "dim_list", 
			"dim_def", "dim_value_def", "dim_param_def", "initializer_list", "tensor_def", 
			"data_type_def", "dims_def", "raw_data_def", "opset_import_def", "version_def", 
			"name_def", "op_type_def"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'ModelProto'", "'graph'", "'name'", "'node'", "'input'", "'output'", 
			"'op_type'", "'attribute'", "'initializer'", "'doc_string'", "'domain'", 
			"'model_version'", "'producer_name'", "'producer_version'", "'type'", 
			"'tensor_type'", "'ir_version'", "'elem_type'", "'shape'", "'dim'", "'dims'", 
			"'raw_data'", "'opset_import'", "'dim_value'", "'dim_param'", "'data_type'", 
			"'version'", "'value'", null, null, null, null, "'{'", "'}'", "'['", 
			"']'", "','", "'='"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "MODELPROTO", "GRAPH", "NAME", "NODE", "INPUT", "OUTPUT", "OP_TYPE", 
			"ATTRIBUTE", "INITIALIZER", "DOC_STRING", "DOMAIN", "MODEL_VERSION", 
			"PRODUCER_NAME", "PRODUCER_VERSION", "TYPE", "TENSOR_TYPE", "IR_VERSION", 
			"ELEM_TYPE", "SHAPE", "DIM", "DIMS", "RAW_DATA", "OPSET_IMPORT", "DIM_VALUE", 
			"DIM_PARAM", "DATA_TYPE", "VERSION", "VALUE", "INT", "FLOAT", "STRING_KEY", 
			"BOOL", "LBRACE", "RBRACE", "LBRACKET", "RBRACKET", "COMMA", "EQUALS", 
			"INTEGER", "STRING", "BYTES", "WS", "COMMENT"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "SONNXParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public SONNXParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ModelContext extends ParserRuleContext {
		public TerminalNode MODELPROTO() { return getToken(SONNXParser.MODELPROTO, 0); }
		public TerminalNode LBRACE() { return getToken(SONNXParser.LBRACE, 0); }
		public Model_body_defContext model_body_def() {
			return getRuleContext(Model_body_defContext.class,0);
		}
		public TerminalNode RBRACE() { return getToken(SONNXParser.RBRACE, 0); }
		public ModelContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_model; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SONNXParserListener ) ((SONNXParserListener)listener).enterModel(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SONNXParserListener ) ((SONNXParserListener)listener).exitModel(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SONNXParserVisitor ) return ((SONNXParserVisitor<? extends T>)visitor).visitModel(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ModelContext model() throws RecognitionException {
		ModelContext _localctx = new ModelContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_model);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(74);
			match(MODELPROTO);
			setState(75);
			match(LBRACE);
			setState(76);
			model_body_def();
			setState(77);
			match(RBRACE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Model_body_defContext extends ParserRuleContext {
		public Ir_version_defContext ir_version_def() {
			return getRuleContext(Ir_version_defContext.class,0);
		}
		public Producer_name_defContext producer_name_def() {
			return getRuleContext(Producer_name_defContext.class,0);
		}
		public Producer_version_defContext producer_version_def() {
			return getRuleContext(Producer_version_defContext.class,0);
		}
		public Domain_defContext domain_def() {
			return getRuleContext(Domain_defContext.class,0);
		}
		public Model_version_defContext model_version_def() {
			return getRuleContext(Model_version_defContext.class,0);
		}
		public Doc_string_defContext doc_string_def() {
			return getRuleContext(Doc_string_defContext.class,0);
		}
		public Graph_defContext graph_def() {
			return getRuleContext(Graph_defContext.class,0);
		}
		public Opset_import_defContext opset_import_def() {
			return getRuleContext(Opset_import_defContext.class,0);
		}
		public Model_body_defContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_model_body_def; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SONNXParserListener ) ((SONNXParserListener)listener).enterModel_body_def(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SONNXParserListener ) ((SONNXParserListener)listener).exitModel_body_def(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SONNXParserVisitor ) return ((SONNXParserVisitor<? extends T>)visitor).visitModel_body_def(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Model_body_defContext model_body_def() throws RecognitionException {
		Model_body_defContext _localctx = new Model_body_defContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_model_body_def);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(79);
			ir_version_def();
			setState(80);
			producer_name_def();
			setState(81);
			producer_version_def();
			setState(82);
			domain_def();
			setState(83);
			model_version_def();
			setState(84);
			doc_string_def();
			setState(85);
			graph_def();
			setState(86);
			opset_import_def();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Ir_version_defContext extends ParserRuleContext {
		public TerminalNode IR_VERSION() { return getToken(SONNXParser.IR_VERSION, 0); }
		public TerminalNode EQUALS() { return getToken(SONNXParser.EQUALS, 0); }
		public TerminalNode INTEGER() { return getToken(SONNXParser.INTEGER, 0); }
		public Ir_version_defContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ir_version_def; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SONNXParserListener ) ((SONNXParserListener)listener).enterIr_version_def(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SONNXParserListener ) ((SONNXParserListener)listener).exitIr_version_def(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SONNXParserVisitor ) return ((SONNXParserVisitor<? extends T>)visitor).visitIr_version_def(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Ir_version_defContext ir_version_def() throws RecognitionException {
		Ir_version_defContext _localctx = new Ir_version_defContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_ir_version_def);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(88);
			match(IR_VERSION);
			setState(89);
			match(EQUALS);
			setState(90);
			match(INTEGER);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Producer_name_defContext extends ParserRuleContext {
		public TerminalNode PRODUCER_NAME() { return getToken(SONNXParser.PRODUCER_NAME, 0); }
		public TerminalNode EQUALS() { return getToken(SONNXParser.EQUALS, 0); }
		public TerminalNode STRING() { return getToken(SONNXParser.STRING, 0); }
		public Producer_name_defContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_producer_name_def; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SONNXParserListener ) ((SONNXParserListener)listener).enterProducer_name_def(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SONNXParserListener ) ((SONNXParserListener)listener).exitProducer_name_def(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SONNXParserVisitor ) return ((SONNXParserVisitor<? extends T>)visitor).visitProducer_name_def(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Producer_name_defContext producer_name_def() throws RecognitionException {
		Producer_name_defContext _localctx = new Producer_name_defContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_producer_name_def);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(92);
			match(PRODUCER_NAME);
			setState(93);
			match(EQUALS);
			setState(94);
			match(STRING);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Producer_version_defContext extends ParserRuleContext {
		public TerminalNode PRODUCER_VERSION() { return getToken(SONNXParser.PRODUCER_VERSION, 0); }
		public TerminalNode EQUALS() { return getToken(SONNXParser.EQUALS, 0); }
		public TerminalNode STRING() { return getToken(SONNXParser.STRING, 0); }
		public Producer_version_defContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_producer_version_def; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SONNXParserListener ) ((SONNXParserListener)listener).enterProducer_version_def(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SONNXParserListener ) ((SONNXParserListener)listener).exitProducer_version_def(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SONNXParserVisitor ) return ((SONNXParserVisitor<? extends T>)visitor).visitProducer_version_def(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Producer_version_defContext producer_version_def() throws RecognitionException {
		Producer_version_defContext _localctx = new Producer_version_defContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_producer_version_def);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(96);
			match(PRODUCER_VERSION);
			setState(97);
			match(EQUALS);
			setState(98);
			match(STRING);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Domain_defContext extends ParserRuleContext {
		public TerminalNode DOMAIN() { return getToken(SONNXParser.DOMAIN, 0); }
		public TerminalNode EQUALS() { return getToken(SONNXParser.EQUALS, 0); }
		public TerminalNode STRING() { return getToken(SONNXParser.STRING, 0); }
		public Domain_defContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_domain_def; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SONNXParserListener ) ((SONNXParserListener)listener).enterDomain_def(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SONNXParserListener ) ((SONNXParserListener)listener).exitDomain_def(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SONNXParserVisitor ) return ((SONNXParserVisitor<? extends T>)visitor).visitDomain_def(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Domain_defContext domain_def() throws RecognitionException {
		Domain_defContext _localctx = new Domain_defContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_domain_def);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(100);
			match(DOMAIN);
			setState(101);
			match(EQUALS);
			setState(102);
			match(STRING);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Model_version_defContext extends ParserRuleContext {
		public TerminalNode MODEL_VERSION() { return getToken(SONNXParser.MODEL_VERSION, 0); }
		public TerminalNode EQUALS() { return getToken(SONNXParser.EQUALS, 0); }
		public TerminalNode INTEGER() { return getToken(SONNXParser.INTEGER, 0); }
		public Model_version_defContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_model_version_def; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SONNXParserListener ) ((SONNXParserListener)listener).enterModel_version_def(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SONNXParserListener ) ((SONNXParserListener)listener).exitModel_version_def(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SONNXParserVisitor ) return ((SONNXParserVisitor<? extends T>)visitor).visitModel_version_def(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Model_version_defContext model_version_def() throws RecognitionException {
		Model_version_defContext _localctx = new Model_version_defContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_model_version_def);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(104);
			match(MODEL_VERSION);
			setState(105);
			match(EQUALS);
			setState(106);
			match(INTEGER);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Doc_string_defContext extends ParserRuleContext {
		public TerminalNode DOC_STRING() { return getToken(SONNXParser.DOC_STRING, 0); }
		public TerminalNode EQUALS() { return getToken(SONNXParser.EQUALS, 0); }
		public TerminalNode STRING() { return getToken(SONNXParser.STRING, 0); }
		public Doc_string_defContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_doc_string_def; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SONNXParserListener ) ((SONNXParserListener)listener).enterDoc_string_def(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SONNXParserListener ) ((SONNXParserListener)listener).exitDoc_string_def(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SONNXParserVisitor ) return ((SONNXParserVisitor<? extends T>)visitor).visitDoc_string_def(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Doc_string_defContext doc_string_def() throws RecognitionException {
		Doc_string_defContext _localctx = new Doc_string_defContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_doc_string_def);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(108);
			match(DOC_STRING);
			setState(109);
			match(EQUALS);
			setState(110);
			match(STRING);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Graph_defContext extends ParserRuleContext {
		public TerminalNode GRAPH() { return getToken(SONNXParser.GRAPH, 0); }
		public TerminalNode LBRACE() { return getToken(SONNXParser.LBRACE, 0); }
		public Graph_body_defContext graph_body_def() {
			return getRuleContext(Graph_body_defContext.class,0);
		}
		public TerminalNode RBRACE() { return getToken(SONNXParser.RBRACE, 0); }
		public Graph_defContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_graph_def; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SONNXParserListener ) ((SONNXParserListener)listener).enterGraph_def(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SONNXParserListener ) ((SONNXParserListener)listener).exitGraph_def(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SONNXParserVisitor ) return ((SONNXParserVisitor<? extends T>)visitor).visitGraph_def(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Graph_defContext graph_def() throws RecognitionException {
		Graph_defContext _localctx = new Graph_defContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_graph_def);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(112);
			match(GRAPH);
			setState(113);
			match(LBRACE);
			setState(114);
			graph_body_def();
			setState(115);
			match(RBRACE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Graph_body_defContext extends ParserRuleContext {
		public Name_defContext name_def() {
			return getRuleContext(Name_defContext.class,0);
		}
		public Node_listContext node_list() {
			return getRuleContext(Node_listContext.class,0);
		}
		public Input_listContext input_list() {
			return getRuleContext(Input_listContext.class,0);
		}
		public Output_listContext output_list() {
			return getRuleContext(Output_listContext.class,0);
		}
		public Initializer_listContext initializer_list() {
			return getRuleContext(Initializer_listContext.class,0);
		}
		public Graph_body_defContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_graph_body_def; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SONNXParserListener ) ((SONNXParserListener)listener).enterGraph_body_def(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SONNXParserListener ) ((SONNXParserListener)listener).exitGraph_body_def(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SONNXParserVisitor ) return ((SONNXParserVisitor<? extends T>)visitor).visitGraph_body_def(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Graph_body_defContext graph_body_def() throws RecognitionException {
		Graph_body_defContext _localctx = new Graph_body_defContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_graph_body_def);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(117);
			name_def();
			setState(118);
			node_list();
			setState(119);
			input_list();
			setState(120);
			output_list();
			setState(122);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==INITIALIZER) {
				{
				setState(121);
				initializer_list();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Node_listContext extends ParserRuleContext {
		public TerminalNode NODE() { return getToken(SONNXParser.NODE, 0); }
		public TerminalNode LBRACE() { return getToken(SONNXParser.LBRACE, 0); }
		public TerminalNode RBRACE() { return getToken(SONNXParser.RBRACE, 0); }
		public List<Node_defContext> node_def() {
			return getRuleContexts(Node_defContext.class);
		}
		public Node_defContext node_def(int i) {
			return getRuleContext(Node_defContext.class,i);
		}
		public List<Node_listContext> node_list() {
			return getRuleContexts(Node_listContext.class);
		}
		public Node_listContext node_list(int i) {
			return getRuleContext(Node_listContext.class,i);
		}
		public Node_listContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_node_list; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SONNXParserListener ) ((SONNXParserListener)listener).enterNode_list(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SONNXParserListener ) ((SONNXParserListener)listener).exitNode_list(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SONNXParserVisitor ) return ((SONNXParserVisitor<? extends T>)visitor).visitNode_list(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Node_listContext node_list() throws RecognitionException {
		Node_listContext _localctx = new Node_listContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_node_list);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(124);
			match(NODE);
			setState(125);
			match(LBRACE);
			setState(127); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(126);
				node_def();
				}
				}
				setState(129); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==OP_TYPE );
			setState(131);
			match(RBRACE);
			setState(135);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(132);
					node_list();
					}
					} 
				}
				setState(137);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Node_defContext extends ParserRuleContext {
		public Op_type_defContext op_type_def() {
			return getRuleContext(Op_type_defContext.class,0);
		}
		public Name_defContext name_def() {
			return getRuleContext(Name_defContext.class,0);
		}
		public Input_arrContext input_arr() {
			return getRuleContext(Input_arrContext.class,0);
		}
		public Output_arrContext output_arr() {
			return getRuleContext(Output_arrContext.class,0);
		}
		public Attribute_listContext attribute_list() {
			return getRuleContext(Attribute_listContext.class,0);
		}
		public Node_defContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_node_def; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SONNXParserListener ) ((SONNXParserListener)listener).enterNode_def(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SONNXParserListener ) ((SONNXParserListener)listener).exitNode_def(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SONNXParserVisitor ) return ((SONNXParserVisitor<? extends T>)visitor).visitNode_def(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Node_defContext node_def() throws RecognitionException {
		Node_defContext _localctx = new Node_defContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_node_def);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(138);
			op_type_def();
			setState(139);
			name_def();
			setState(140);
			input_arr();
			setState(141);
			output_arr();
			setState(143);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==ATTRIBUTE) {
				{
				setState(142);
				attribute_list();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Input_arrContext extends ParserRuleContext {
		public TerminalNode INPUT() { return getToken(SONNXParser.INPUT, 0); }
		public TerminalNode EQUALS() { return getToken(SONNXParser.EQUALS, 0); }
		public TerminalNode LBRACKET() { return getToken(SONNXParser.LBRACKET, 0); }
		public List<TerminalNode> STRING() { return getTokens(SONNXParser.STRING); }
		public TerminalNode STRING(int i) {
			return getToken(SONNXParser.STRING, i);
		}
		public TerminalNode RBRACKET() { return getToken(SONNXParser.RBRACKET, 0); }
		public List<TerminalNode> COMMA() { return getTokens(SONNXParser.COMMA); }
